testdata/baselines/reference/submodule/conformance/propertyOverridesAccessors.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
propertyOverridesAccessors.ts(5,5): error TS2610: 'p' is defined as an accessor in class 'A', but is overridden here in 'B' as an instance property.
propertyOverridesAccessors.ts(13,5): error TS2610: 'p' is defined as an accessor in class 'C', but is overridden here in 'D' as an instance property.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== propertyOverridesAccessors.ts (2 errors) ====
    class A {
        get p() { return 'oh no' }
    }
    class B extends A {
        p = 'yep' // error
        ~
!!! error TS2610: 'p' is defined as an accessor in class 'A', but is overridden here in 'B' as an instance property.
    }
    class C {
        _secret = 11
        get p() { return this._secret }
        set p(value) { this._secret = value }
    }
    class D extends C {
        p = 101 // error
        ~
!!! error TS2610: 'p' is defined as an accessor in class 'C', but is overridden here in 'D' as an instance property.
    }
    